err_icon_2.txt
   Compiling LaunchWinTrayMenu v0.1.0 (D:\Projects\QtSYS\LaunchWinTrayMenu\Gitea)
    Checking tao v0.30.8
warning: unused import: `Submenu`
 --> src\main.rs:5:71
  |
5 | use muda::{IsMenuItem, Menu, MenuEvent, MenuItem, PredefinedMenuItem, Submenu, MenuId};
  |                                                                       ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Event` and `WindowEvent`
 --> src\main.rs:6:18
  |
6 | use tao::event::{Event, WindowEvent};
  |                  ^^^^^  ^^^^^^^^^^^

warning: unused import: `TrayIcon`
 --> src\main.rs:9:17
  |
9 | use tray_icon::{TrayIcon, TrayIconBuilder, TrayIconEvent};
  |                 ^^^^^^^^

warning: unused import: `PathBuf`
  --> src\main.rs:12:23
   |
12 | use std::path::{Path, PathBuf};
   |                       ^^^^^^^

warning: unused imports: `Arc` and `Mutex`
  --> src\main.rs:13:17
   |
13 | use std::sync::{Arc, Mutex};
   |                 ^^^  ^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `open`
   --> src\main.rs:154:26
    |
154 |                  let _ = open::that(&ini_path);
    |                          ^^^^ use of unresolved module or unlinked crate `open`
    |
    = help: if you wanted to use a crate named `open`, use `cargo add open` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `open`
   --> src\main.rs:174:38
    |
174 |                      if let Err(e) = open::that(cmd_clone) {
    |                                      ^^^^ use of unresolved module or unlinked crate `open`
    |
    = help: if you wanted to use a crate named `open`, use `cargo add open` to add it to your `Cargo.toml`

warning: unused import: `IsMenuItem`
 --> src\main.rs:5:12
  |
5 | use muda::{IsMenuItem, Menu, MenuEvent, MenuItem, PredefinedMenuItem, Submenu, MenuId};
  |            ^^^^^^^^^^

For more information about this error, try `rustc --explain E0433`.
warning: `LaunchWinTrayMenu` (bin "LaunchWinTrayMenu") generated 6 warnings
error: could not compile `LaunchWinTrayMenu` (bin "LaunchWinTrayMenu") due to 2 previous errors; 6 warnings emitted
